--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+/target
+/classes
+/checkouts
+profiles.clj
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
+/.prepl-port
+.hgignore
+.hg/
+config.edn
 /.clj-kondo
 /.lsp
-/.nrepl-port
+/.calva
+/.cpcache
