--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,9 +20,9 @@ jobs:
           java-version: '21'
 
       - name: Install Clojure CLI
-        uses: DeLaGuardo/setup-clojure@12.5
+        uses: DeLaGuardo/setup-clojure@master
         with:
-          cli: 1.11.1
+          cli: 1.11.1.1273
 
       - name: Cache Maven packages
         uses: actions/cache@v3
