fix(docs): make difference between feature reqs visible

--- a/.github/ISSUE_TEMPLATE/FEATURE.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE.yml
@@ -1,5 +1,5 @@
-name: Feature Request
-description: Something should be added
+name: Feature
+description: "Something should be added, have been discussed and approved"
 title: Please summarize the needed feature
 assignees: ["J0sueTM", "lanjoni"]
 labels: ["enhancement"]
